The great refactor: part 2.